[project]
name = "ragchatbot"
version = "0.0.1"
description = "A simple RAG chatbot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb==1.0.15",
    "anthropic==0.58.2",
    "sentence-transformers==5.0.0",
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "python-multipart==0.0.20",
    "python-dotenv==1.1.1",
]

[project.scripts]
ragchatbot = "ragchatbot:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"